sorted out some spacing issues

--- a/src/components/Resume.module.scss
+++ b/src/components/Resume.module.scss
@@ -16,8 +16,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    overflow: auto;
-    position: relative;
+    overflow: hidden;
 
     .title {
       padding: 1em;
@@ -28,19 +27,22 @@
       align-items: center;
       justify-content: center;
       font-family: var(--sans-font);
+
       a,
       a:visited {
         color: $primary-invert;
       }
     }
+
     .body {
       background-color: $primary-lighter;
       flex-grow: 2;
       width: 100%;
+      height: 100%;
+      overflow: auto;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
     }
   }
 }
